// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PoolManager #initialize gas cost 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 54522,
}
`;

exports[`PoolManager #mint gas cost 1`] = `
Object {
  "calldataByteLength": 260,
<<<<<<< HEAD
<<<<<<< HEAD
  "gasUsed": 267897,
=======
  "gasUsed": 268032,
>>>>>>> d857b01 (fix tests)
=======
  "gasUsed": 267823,
>>>>>>> 63251d6 (add unchecked, use more specific typename)
}
`;

exports[`PoolManager #mint gas cost with hooks 1`] = `
Object {
  "calldataByteLength": 260,
<<<<<<< HEAD
<<<<<<< HEAD
  "gasUsed": 272320,
=======
  "gasUsed": 272456,
>>>>>>> d857b01 (fix tests)
=======
  "gasUsed": 272246,
>>>>>>> 63251d6 (add unchecked, use more specific typename)
}
`;

exports[`PoolManager #mint gas cost with native tokens 1`] = `
Object {
  "calldataByteLength": 260,
<<<<<<< HEAD
<<<<<<< HEAD
  "gasUsed": 247210,
=======
  "gasUsed": 247345,
>>>>>>> d857b01 (fix tests)
=======
  "gasUsed": 247136,
>>>>>>> 63251d6 (add unchecked, use more specific typename)
}
`;

exports[`PoolManager #swap gas cost 1`] = `
Object {
  "calldataByteLength": 324,
<<<<<<< HEAD
<<<<<<< HEAD
  "gasUsed": 87536,
=======
  "gasUsed": 87620,
>>>>>>> d857b01 (fix tests)
=======
  "gasUsed": 87402,
>>>>>>> 63251d6 (add unchecked, use more specific typename)
}
`;

exports[`PoolManager #swap gas cost for swap against liquidity 1`] = `
Object {
  "calldataByteLength": 324,
<<<<<<< HEAD
<<<<<<< HEAD
  "gasUsed": 187029,
=======
  "gasUsed": 187247,
>>>>>>> d857b01 (fix tests)
=======
  "gasUsed": 186924,
>>>>>>> 63251d6 (add unchecked, use more specific typename)
}
`;

exports[`PoolManager #swap gas cost for swap with native tokens against liquidity 1`] = `
Object {
  "calldataByteLength": 324,
<<<<<<< HEAD
<<<<<<< HEAD
  "gasUsed": 179989,
=======
  "gasUsed": 180207,
>>>>>>> d857b01 (fix tests)
=======
  "gasUsed": 179884,
>>>>>>> 63251d6 (add unchecked, use more specific typename)
}
`;

exports[`PoolManager #swap gas cost with hooks 1`] = `
Object {
  "calldataByteLength": 324,
<<<<<<< HEAD
<<<<<<< HEAD
  "gasUsed": 87564,
=======
  "gasUsed": 87649,
>>>>>>> d857b01 (fix tests)
=======
  "gasUsed": 87431,
>>>>>>> 63251d6 (add unchecked, use more specific typename)
}
`;

exports[`PoolManager #swap gas cost with native tokens 1`] = `
Object {
  "calldataByteLength": 324,
<<<<<<< HEAD
<<<<<<< HEAD
  "gasUsed": 87344,
}
`;

exports[`PoolManager bytecode size 1`] = `26342`;
=======
  "gasUsed": 87428,
}
`;

exports[`PoolManager bytecode size 1`] = `26272`;
>>>>>>> d857b01 (fix tests)
=======
  "gasUsed": 87210,
}
`;

exports[`PoolManager bytecode size 1`] = `26218`;
>>>>>>> 63251d6 (add unchecked, use more specific typename)
